test get connector impl